--- a/css/styles.css
+++ b/css/styles.css
@@ -189,3 +189,41 @@ a[title="Go to Homepage"]{
 .links-10{
     border-bottom: 3px solid white;
 }
+
+/* Shopping cart */
+
+.cart-container{
+    width: 70%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 0px 25px 40px #1687d933;
+    position: absolute;
+    top: 30%;
+    left: 16%;
+  }
+  
+  .headerCart{
+    margin: auto;
+    width: 80%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+  }
+  
+  .HEADING{
+    font-size: 14px;
+    font-family: 'Open Sans';
+    font-weight: 700;
+    color: #640202;
+  }
+  
+  .ACTION{
+    font-size: 12px;
+    font-family: 'Open Sans';
+    font-weight: 600;
+    color: #5C9Bab;
+    cursor: pointer;
+    border-bottom: 1px solid; 
+  }
